test/files/errors/wrongArgument.jg
lol int (name string, value int) {
    (name.len + value) return;
}

_main int () {
    (4 "hello") lol return;
}